--- a/trunk/WebContent/WEB-INF/web.xml
+++ b/trunk/WebContent/WEB-INF/web.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" metadata-complete="true" version="3.0">
   <servlet>
-    <description>BudgetServelet</description>
-    <display-name>BudgetServelet</display-name>
+    <description>Budget Servlet</description>
+    <display-name>Budget Servlet</display-name>
     <servlet-name>Budget</servlet-name>
     <servlet-class>com.taoHelper.servlet.BudgetServlet</servlet-class>
   </servlet>
   <servlet>
-    <description>FavoriteServelet</description>
-    <display-name>FavoriteServelet</display-name>
+    <description>Favorite Servlet</description>
+    <display-name>Favorite Servlet</display-name>
     <servlet-name>FavoriteItem</servlet-name>
     <servlet-class>com.taoHelper.servlet.FavoriteItemServlet</servlet-class>
   </servlet>
   <servlet>
-    <description>AuthorizeServelet</description>
-    <display-name>AuthorizeServelet</display-name>
+    <description>Authorize Servlet</description>
+    <display-name>Authorize Servlet</display-name>
     <servlet-name>Authorize</servlet-name>
     <servlet-class>com.taoHelper.servlet.AuthorizeServlet</servlet-class>
+  </servlet>
+   <servlet>
+    <description>MoneyInMonth Servlet</description>
+    <display-name>MoneyInMonth Servlet</display-name>
+    <servlet-name>MoneyInMonth</servlet-name>
+    <servlet-class>com.taoHelper.servlet.MoneyInMonthServlet</servlet-class>
   </servlet>
   
   <servlet-mapping>
@@ -25,10 +31,14 @@
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>FavoriteItem</servlet-name>
-    <url-pattern>/FavoriteItem</url-pattern>
+    <url-pattern>/favoriteitem</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>Authorize</servlet-name>
     <url-pattern>/authorize</url-pattern>
+  </servlet-mapping>
+    <servlet-mapping>
+    <servlet-name>MoneyInMonth</servlet-name>
+    <url-pattern>/moneyinmonth</url-pattern>
   </servlet-mapping>
 </web-app>
