--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -18,7 +18,7 @@
     <servlet-name>Authorize</servlet-name>
     <servlet-class>com.taoHelper.servlet.AuthorizeServlet</servlet-class>
   </servlet>
-   <servlet>
+  <servlet>
     <description>MoneyInMonth Servlet</description>
     <display-name>MoneyInMonth Servlet</display-name>
     <servlet-name>MoneyInMonth</servlet-name>
@@ -30,29 +30,36 @@
     <servlet-name>MoneyInCat</servlet-name>
     <servlet-class>com.taoHelper.servlet.MoneyInCatServlet</servlet-class>
   </servlet>
-  <!-- added by zhaowei -->
-	<servlet>
-		<description>CurrentTrade Servlet</description>
-		<display-name>CurrentTrade Servlet</display-name>
-		<servlet-name>CurrentTrade</servlet-name>
-		<servlet-class>com.taoHelper.servlet.CurrentTradeServlet</servlet-class>
-	</servlet>
-
-	<servlet>
-		<description>Logistics Servlet</description>
-		<display-name>Logistics Servlet</display-name>
-		<servlet-name>Logistics</servlet-name>
-		<servlet-class>com.taoHelper.servlet.LogisticsServlet</servlet-class>
-	</servlet>
-
-	<servlet>
-		<description>PriceTrend Servlet</description>
-		<display-name>PriceTrend Servlet</display-name>
-		<servlet-name>PriceTrend</servlet-name>
-		<servlet-class>com.taoHelper.servlet.PriceTrendServlet</servlet-class>
-	</servlet>
-	<!-- end added by zhaowei -->
-	
+  <servlet>
+    <description>CurrentTrade Servlet</description>
+    <display-name>CurrentTrade Servlet</display-name>
+    <servlet-name>CurrentTrade</servlet-name>
+    <servlet-class>com.taoHelper.servlet.CurrentTradeServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <description>Logistics Servlet</description>
+    <display-name>Logistics Servlet</display-name>
+    <servlet-name>Logistics</servlet-name>
+    <servlet-class>com.taoHelper.servlet.LogisticsServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <description>PriceTrend Servlet</description>
+    <display-name>PriceTrend Servlet</display-name>
+    <servlet-name>PriceTrend</servlet-name>
+    <servlet-class>com.taoHelper.servlet.PriceTrendServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <description>Preference Servlet</description>
+    <display-name>Preference Servlet</display-name>
+    <servlet-name>Preference</servlet-name>
+    <servlet-class>com.taoHelper.PreferenceServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <description>Recommend Servlet</description>
+    <display-name>Recommend Servlet</display-name>
+    <servlet-name>Recommend</servlet-name>
+    <servlet-class>com.taoHelper.RecommendServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>Budget</servlet-name>
     <url-pattern>/budget</url-pattern>
@@ -65,28 +72,32 @@
     <servlet-name>Authorize</servlet-name>
     <url-pattern>/authorize</url-pattern>
   </servlet-mapping>
-    <servlet-mapping>
+  <servlet-mapping>
     <servlet-name>MoneyInMonth</servlet-name>
     <url-pattern>/moneyinmonth</url-pattern>
   </servlet-mapping>
-   <servlet-mapping>
+  <servlet-mapping>
     <servlet-name>MoneyInCat</servlet-name>
     <url-pattern>/moneyincat</url-pattern>
   </servlet-mapping>
-  <!-- added by zhaowei -->
-	<servlet-mapping>
-		<servlet-name>CurrentTrade</servlet-name>
-		<url-pattern>/currenttrade</url-pattern>
-	</servlet-mapping>
-
-	<servlet-mapping>
-		<servlet-name>Logistics</servlet-name>
-		<url-pattern>/logistics</url-pattern>
-	</servlet-mapping>
-
-	<servlet-mapping>
-		<servlet-name>PriceTrend</servlet-name>
-		<url-pattern>/pricetrend</url-pattern>
-	</servlet-mapping>
-	<!-- end added by zhaowei -->
+  <servlet-mapping>
+    <servlet-name>CurrentTrade</servlet-name>
+    <url-pattern>/currenttrade</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Logistics</servlet-name>
+    <url-pattern>/logistics</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>PriceTrend</servlet-name>
+    <url-pattern>/pricetrend</url-pattern>
+  </servlet-mapping>
+   <servlet-mapping>
+    <servlet-name>Preference</servlet-name>
+    <url-pattern>/preference</url-pattern>
+  </servlet-mapping>
+    <servlet-mapping>
+    <servlet-name>Recommend</servlet-name>
+    <url-pattern>/recommend</url-pattern>
+  </servlet-mapping>
 </web-app>
